--- a/doc/info/pt.utf8/maxima.texi
+++ b/doc/info/pt.utf8/maxima.texi
@@ -259,7 +259,7 @@ Linha de Comando
 
 Operadores
 
-* "N" Argumentos::                        
+* N-Argumentos::                        
 * Sem Argumentos::                       
 * Operador::                    
 * Operador P@'osfixado::                     
