--- a/doc/info/pt_BR/plotdf.texi
+++ b/doc/info/pt_BR/plotdf.texi
@@ -1,5 +1,5 @@
 @c Language: Brazilian Portuguese, Encoding: iso-8859-1
-@c /plotdf.texi/1.6/Tue Dec 26 07:17:12 2006//
+@c /plotdf.texi/1.7/Thu Apr 12 2007//
 @menu
 * Introdu@value{cedilha}@~{a}o a plotdf::
 * Defini@value{cedilha}@~{o}es para plotdf::
@@ -12,9 +12,11 @@ A fun@value{cedilha}@~{a}o @code{plotdf} cria um gr@'{a}fico do campo de dire@va
 Equa@value{cedilha}@~{a}o Diferencial Ordin@'{a}ria (EDO) de primeira ordem ou um sistema de duas
 EDO's de primeira ordem aut@^{o}nomas.
 
-Uma vez que esse @'{e} um apcote adicional, com o objetivo de us@'{a}-lo voc@^{e} deve primeiramente
-cham@'{a}-lo com @code{load("plotdf")}. Voc@^{e} tamb@'{e}m precisa do Xmaxima
-instalado, mesmo que voc@^{e} execute o Maxima usando uma interface diferente.
+Uma vez que esse @'{e} um pacote adicional, com o objetivo de us@'{a}-lo voc@^{e} deve primeiramente
+cham@'{a}-lo com @code{load("plotdf")}. Plotdf
+precisa do Openmath, que @'e fornecido pelo pacote Xmaxima (Xmaxima,
+para al@'em de servir como consola gr@'afica para o Maxima, @'e tamb@'em
+o programa que produz os gr@'aficos no formato Openmath).
 
 Para montar um gr@'{a}fico do campo de dire@value{cedilha}@~{a}o de uma EDO simples, a EDO deve ser escrita na
 forma:
@@ -30,9 +32,10 @@ $${{dy}\over{dx}} = F(x,y)$$
 @end tex
 
 e a fun@value{cedilha}@~{a}o @var{F} pode ser dada como um argumento para
-@code{plotdf}. A vari@'{a}vel independente est@'{a} sempre identificada como @var{x},
-e a vari@'{a}vel dependente como @var{y}. Essas duas vari@'{a}veis podem n@~{a}o
-ter quaisquer valores atribu@'{i}dos a elas.
+@code{plotdf}. Se as vari@'aveis independente e dependente n@~ao
+forem @var{x} e @var{y}, como na equa@value{cedilha}@~ao acima, ent@~ao
+os nomes dessas duas vari@'aveis dever@'a indicar-se numa lista que
+ser@'a o segundo argumento para o comando plotdf (ver os exemplos).
 
 Para montar o gr@'{a}fico do campo de dire@value{cedilha}@~{a}o de um conjunto de duas EDO's aut@^{o}nomas, elas devem
 ser escritas na forma
@@ -48,7 +51,14 @@ $${{dx}\over{dt}} = G(x,y) \qquad {{dy}\over{dt}} = F(x,y)$$
 @end tex
 
 e o argumento para @code{plotdf} pode ser uma lista com as duas
-fun@value{cedilha}@~{o}es @var{F} e @var{G}, em qualquer ordem.
+fun@value{cedilha}@~{o}es @var{F} e @var{G}, nessa
+ordem; nomeadamente, a primeira express@~ao definir@'a a derivada no
+tempo da vari@'avel representada no eixo horizontal, e a segunda
+express@~ao ser@'a a derivada no tempo da vari@'avel representada no eixo
+vertical. Essas duas vari@'aveis n@~ao t@^em que ser @var{x} e @var{y},
+mas se n@~ao forem, ent@~ao o segundo argumento para o comando plotdf
+dever@'a ser uma lista com os nomes dessas vari@'aveis, primeiro a
+vari@'avel no eixo horizontal, seguida da vari@'avel no eixo vertical.
 
 Se somente uma EDO for fornecida, @code{plotdf} ir@'{a} admitir implicitamente
 @code{x=t}, e @code{G(x,y)=1}, transformando a equa@value{cedilha}@~{a}o n@~{a}o
@@ -57,13 +67,16 @@ aut@^{o}noma em um sistema de duas equa@value{cedilha}@~{o}es aut@^{o}nomas.
 @node Defini@value{cedilha}@~{o}es para plotdf,  , Introdu@value{cedilha}@~{a}o a plotdf, plotdf
 @section Defini@value{cedilha}@~{o}es para plotdf
 
-@deffn {Fun@value{cedilha}@~{a}o} plotdf (@var{dydx},...op@value{cedilha}@~{o}es...)
-@deffnx {Fun@value{cedilha}@~{a}o} plotdf (@code{[}@var{dxdt},@var{dydt}@code{]},...op@value{cedilha}@~{o}es...)
+@deffn {Function} plotdf (@var{dydx}, ...op@value{cedilha}@~oes...)
+@deffnx {Function} plotdf (@var{dvdu}, @code{[}@var{u},@var{v}@code{]}, ...op@value{cedilha}@~oes...)
+@deffnx {Function} plotdf (@code{[}@var{dxdt},@var{dydt}@code{]}, ...op@value{cedilha}@~oes...)
+@deffnx {Function} plotdf (@code{[}@var{dudt},@var{dvdt}@code{]}, @code{[}@var{u},@var{v}@code{]}, ...op@value{cedilha}@~oes...)
 
 Mostra um campo de dire@value{cedilha}@~{a}o em duas dimens@~{o}es @var{x} e @var{y}.
 
 @var{dydx}, @var{dxdt} e @var{dydt} s@~{a}o express@~{o}es que dependem
-de @var{x} e @var{y}. Adicionalmente para essas duas vari@'{a}veis, as
+de @var{x} e @var{y}. @var{dvdu}, @var{dudt} e @var{dvdt} s@~{a}o express@~{o}es que dependem
+de @var{u} e @var{v}. Adicionalmente para essas duas vari@'{a}veis, as
 express@~{o}es podem tamb@'{e}m depender de um conjunto de par@^{a}metros, com valores
 num@'{e}ricos fornecidos com os @code{par@^{a}metros} op@value{cedilha}@~{a}o (a sintaxe de op@value{cedilha}@~{a}o @'{e}
 fornecida abaixo), ou com um intervalo de valores permitidos especificados por meio de uma
@@ -85,7 +98,7 @@ O menu na janela do gr@'{a}fico tem as seguintes op@value{cedilha}@~{o}es: @emph
 modificar o comportamento do mouse de forma que seja permitido a voc@^{e} aproximar uma
 regi@~{a}o do gr@'{a}fico por meio de um clique nessa regi@~{a}o como o bot@~{a}o esquerdo. Cada clique pr@'{o}ximo a um
 ponto do gr@'{a}fico amplia esse gr@'{a}fico, mantendo o contro no ponto onde voc@^{e}
-clicou. Mantendo a tecla @key{Shift} pressioada enquanto clica, afasta para a
+clicou. Mantendo a tecla @key{Shift} pressionada enquanto clica, afasta para a
 amplia@value{cedilha}@~{a}o anterior. Para continuar calculando trajet@'{o}rias quando voc@^{e} clica
 sobre um ponto, selecione @emph{Integrate} a partir do menu.
 
@@ -103,12 +116,8 @@ usado para arrastar as laterais do gr@'{a}fico para cima ou para baixo. Par@^{a}
 adicionais tais como o n@'{u}mero de passos, o valor inicial de @var{t}
 e os centros de x e y e raios, podem ser escolhidos no menu Config.
 
-Uma c@'{o}pia do gr@'{a}fico pode ser impressa para uma impressora Postscript, ou gravada como um
-arquivo postscript, usando a op@value{cedilha}@~{a}o @emph{Save} do menu. Para alternar entre
-imprimir e gravar para um arquivo Postscript, @emph{Print Options} pode ser
-selecionada na janela de di@'{a}logo de @emph{Config}. Ap@'{o}s as escolhas na
-janela de di@'{a}logo @emph{Save} serem fornecidas, "Save'' deve ser selecionada no primeiro
-menu, para cirar o arquivo ou imprimir o gr@'{a}fico.
+Uma c@'{o}pia do gr@'{a}fico pode ser gravada como um arquivo
+postscript, usando a op@value{cedilha}@~{a}o @emph{Save} do menu.
 
 @b{Op@value{cedilha}@~{o}es de gr@'{a}fico:}
 
@@ -138,7 +147,7 @@ independente que ser@'{a} seguida para calcular uma curva integral. Poss@'{i}vei
 valores s@~{a}o @code{forward}, para fazer a vari@'{a}vel independente aumentar
 @code{nsteps} vezes, com incrementos de @code{tstep}, @code{backward}, para
 fazer a vari@'{a}vel independente diminuir, ou @code{both} que ir@'{a} conduzir a
-um curva integral que amplia @code{nsteps} adiante, e @code{nsteps}
+uma curva integral que amplia @code{nsteps} adiante, e @code{nsteps}
 para tr@'{a}s. As palavras chave @code{right} e @code{left} podem ser usadas como
 sinonimos para @code{forward} e @code{backward}.
 O valor padr@~{a}o @'{e} @code{both}.
@@ -146,7 +155,7 @@ O valor padr@~{a}o @'{e} @code{both}.
 @item
 @dfn{tinitial} define o valor inicial da vari@'{a}vel @var{t} usada
 para calcular curva integral. Uma vez que equa@value{cedilha}@~{o}es diferenciais forem
-aut@^{o}nomas, aquela esxolha ir@'{a} aparecer somente no gr@'{a}fico das curvas como
+aut@^{o}nomas, aquela escolha ir@'{a} aparecer somente no gr@'{a}fico das curvas como
 fun@value{cedilha}@~{o}es de @var{t}. 
 O valor padr@~{a}o @'{e} 0.
 
@@ -182,48 +191,32 @@ ponto e v@'{i}rgula @var{x} para serem mostradas, no topo do campo de dire@value
 Essas fun@value{cedilha}@~{o}es ir@~{a}o ser passadas pelo Tcl e n@~{a}o pelo Maxima.
 
 @item
-@dfn{xradius} @'{e} metade do comprimento do intervalo dos valores que
-ir@~{a}o ser mostrados na dire@value{cedilha}@~{a}o x.
-O valor padr@~{a}o @'{e} 10.
+@dfn{x} dever@'a estar seguida de dois n@'umeros que definem os valores
+m@'{@dotless{i}}nimo e m@'aximo a serem apresentados no eixo horizontal.
+Se a vari@'avel no eixo horizontal n@~ao for @var{x}, esta
+op@value{cedilha}@~ao dever@'a ter o nome da vari@'avel no eixo
+horizontal.
+O intervalo padr@~ao @'e de -10 a 10.
 
 @item
-@dfn{yradius} @'{e} metade do comprimento do intervalo dos valores que
-ir@~{a}o ser mostrados na dire@value{cedilha}@~{a}o y.
-O valor padr@~{a}o @'{e} 10.
+@dfn{y} dever@'a estar seguida de dois n@'umeros que definem os valores
+m@'{@dotless{i}}nimo e m@'aximo a serem apresentados no eixo vertical.
+Se a vari@'avel no eixo vertical n@~ao for @var{y}, esta
+op@value{cedilha}@~ao dever@'a ter o nome da vari@'avel no eixo
+vertical.
+O intervalo padr@~ao @'e de -10 a 10.
 
-@item
-@dfn{xcenter} @'{e} a coordenada x do ponto no centro do
-gr@'{a}fico.
-O valor padr@~{a}o @'{e} 0.
-
-@item
-@dfn{ycenter} @'{e} a coordenada y do ponto no centro do
-gr@'{a}fico.
-O valor padr@~{a}o @'{e} 0.
-
-@item
-@dfn{width} define a largura da janela do gr@'{a}fico, em pixels.
-O valor padr@~{a}o @'{e} 500.
-
-@item
-@dfn{height} define a altura da janela do gr@'{a}fico, em pixels.
-O valor padr@~{a}o @'{e} 500.
 @end itemize
 
 @b{Exemplos:}
 
-NOTA: Dependendo da interface usada para executar o Maxima, as fun@value{cedilha}@~{o}es que
-usam @code{openmath}, em particular @code{plotdf}, podem possivelmente disparar um erro se
-erminarem com ponto e v@'{i}rgula e n@~{a}o com um sinal de d@'{o}lar. Para evitar
-problemas, usamos um sinal de d@'{o}lar em todos os exemplos abaixo.
-  
 @itemize @bullet
 @item
 Para mostrar o campo de dire@value{cedilha}@~{a}o da equa@value{cedilha}@~{a}o diferencial @math{y' = exp(-x) + y} e a solu@value{cedilha}@~{a}o que vai em toda a extens@~{a}o do intervalo @math{(2, -0.1)}:
 @example
 (%i1) load("plotdf")$
 
-(%i2) plotdf(exp(-x)+y,[trajectory_at,2,-0.1]);
+(%i2) plotdf(exp(-x)+y,[trajectory_at,2,-0.1])$
 @end example
 
 @ifnotinfo
@@ -235,7 +228,7 @@ Para obter o campo de dire@value{cedilha}@~{a}o para a equa@value{cedilha}@~{a}o
 @example
 (%i3) plotdf(x-y^2,[xfun,"sqrt(x);-sqrt(x)"],
           [trajectory_at,-1,3], [direction,forward],
-          [yradius,5],[xcenter,6]);
+          [y,-5,5], [x,-4,16])$
 @end example
 O gr@'{a}fico tamb@'{e}m mostra a fun@value{cedilha}@~{a}o @math{y = sqrt(x)}. 
 
@@ -245,13 +238,13 @@ O gr@'{a}fico tamb@'{e}m mostra a fun@value{cedilha}@~{a}o @math{y = sqrt(x)}.
 
 @item
 O seguinte exemplo mostra o campo de dire@value{cedilha}@~{a}o de um oscilador harm@^{o}nico,
-definido pelas duas equa@value{cedilha}@~{o}es @math{dx/dt = y} e @math{dy/dt = -k*x/m},
-e a curva integral em todo o intervalo @math{(x,y) = (6,0)}, com um bot@~{a}o de deslizamento que
+definido pelas duas equa@value{cedilha}@~{o}es @math{dz/dt = v} e @math{dv/dt = -k*z/m},
+e a curva integral no ponto @math{(z,v) = (6,0)}, com um bot@~{a}o de deslizamento que
 ir@'{a} permitir a voc@^{e} mudar o valor de @math{m} interativamente (@math{k} est@'{a}
 fixado em 2):
 @example
-(%i4) plotdf([y,-k*x/m],[parameters,"m=2,k=2"],
-            [sliders,"m=1:5"], [trajectory_at,6,0]);
+(%i4) plotdf([v,-k*z/m], [z,v], [parameters,"m=2,k=2"],
+            [sliders,"m=1:5"], [trajectory_at,6,0])$
 @end example
 
 @ifnotinfo
@@ -263,7 +256,7 @@ Para montar o gr@'{a}fico do campo de dire@value{cedilha}@~{a}o da equa@value{ce
 @example
 (%i5) plotdf([y,-(k*x + c*y + b*x^3)/m],
               [parameters,"k=-1,m=1.0,c=0,b=1"],
-              [sliders,"k=-2:2,m=-1:1"],[tstep,0.1]);
+              [sliders,"k=-2:2,m=-1:1"], [tstep,0.1])$
 @end example
 
 @ifnotinfo
@@ -277,12 +270,11 @@ pode ser usado para mudar o valor da massa @math{m}, e com um gr@'{a}fico das
 duas  vari@'{a}veis de estado como uma fun@value{cedilha}@~{a}o do tempo:
 
 @example
-(%i6) plotdf([y,-g*sin(x)/l - b*y/m/l],
+(%i6) plotdf([w,-g*sin(a)/l - b*w/m/l], [a,w],
          [parameters,"g=9.8,l=0.5,m=0.3,b=0.05"],
-         [trajectory_at,1.05,-9],[tstep,0.01],
-         [xradius,6],[yradius,14],
-         [xcenter,-4],[direction,forward],[nsteps,300],
-         [sliders,"m=0.1:1"], [versus_t,1]);
+         [trajectory_at,1.05,-9], [tstep,0.01],
+         [x,-10,2], [y,-14,14], [direction,forward],
+         [nsteps,300], [sliders,"m=0.1:1"], [versus_t,1])$
 @end example
 
 @ifnotinfo
